# myraytracer

./: .gitignore  CMakeLists.txt  README.md  camera.c  camera.h  color.c  color.h  compile_commands.json  hittable.c  hittable.h  hittable_list.c  hittable_list.h  interval.c  interval.h  main.c  ray.c  ray.h  rt.c  rt.h  sphere.c  sphere.h  vec3.c  vec3.h
